--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="startUe">Starte den Uebungskatalog</string>
     <string name="startTr">Starte eine Trainingssession</string>
     <string name="welcome">Willkommen in der FIPLY APP!</string>
+    <string name="titleUe">Willkommen im Übungskatalog!</string>
+    <string name="titleTS">Willkommen in einer Traingssession!</string>
+    <string name="titleEU">Willkommen in einer Traingssession!</string>
 </resources>
