MenuActivity wure als ListActivity erstellt und zeigt mittels ListAdapter alle navigierbaren Activitys an

--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="titleUe">Willkommen im Übungskatalog!</string>
     <string name="titleTS">Willkommen in einer Traingssession!</string>
     <string name="titleEU">Willkommen in der Usererstellung!</string>
+    <string name="startMenu">Starte das Menu</string>
 </resources>
