--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="tsTimerBtReset">Reset</string>
     <string name="tsStopwatchBtStart">Start</string>
     <string name="tsStopwatchBtReset">Reset</string>
+    <string name="drawer_open">Navigationsleiste öffnen</string>
+    <string name="drawer_close">Navigationsleiste schließen</string>
 </resources>
