Reformatierung des UebungsdetailFragments

--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="detailZG">Zielgruppe: </string>
     <string name="detailDesc">Beschreibung: </string>
     <string name="detailAnl">Anleitung: </string>
+    <string name="detailName">Dummy-Name</string>
 
     <string-array name="navigationArray">
         <item>Mainmenü</item>
