--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -26,6 +26,12 @@
     <string name="songLast">&#171;</string>
     <string name="songList">&#8801;</string>
     <string name="songNotFound">Keine Songs hefunden</string>
+    <string name="watchStart">Start</string>
+    <string name="watchPause">Pause</string>
+    <string name="watchContinue">Continue</string>
+    <string name="watchReset">Reset</string>
+    <string name="watchLap">Lap</string>
+
 
     <string-array name="navigationArray">
         <item>Mainmenü</item>
