--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="songNext">&#187;</string>
     <string name="songLast">&#171;</string>
     <string name="songList">&#8801;</string>
-    <string name="songNotFound">Keine Songs hefunden</string>
+    <string name="songNotFound">Keine Songs gefunden</string>
     <string name="watchStart">Start</string>
     <string name="watchPause">Pause</string>
     <string name="watchContinue">Continue</string>
