--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -548,4 +548,26 @@
         <item>Playlists</item>
     </string-array>
 
+  <string-array name="proficiency">
+    <item>Out of Shape</item>
+    <item>Average</item>
+    <item>Rather Fit</item>
+    <item>Lifts heavy things regularly</item>
+    <item>Arnold Schwarzenegger</item>
+  </string-array>
+
+  <string-array name="ageGroups">
+    <item>16-20</item>
+    <item>21-30</item>
+    <item>31-40</item>
+    <item>41-50</item>
+    <item>50+</item>
+  </string-array>
+
+  <string-array name="gender">
+    <item>Male</item>
+    <item>Female</item>
+    <item>Other</item>
+  </string-array>
+
 </resources>
