Trainingsplangenerator 1. Fortschritt: Phase 1 Allgemein

--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="etPlName">Playlistname</string>
     <string name="btPlSave">Save</string>
     <string name="btPlAdd">Add</string>
+    <string name="startTrainPlan">Generiere Trainingsplan</string>
 
     <string name="exercisecatalog">
         [
