Recreated last iteration trainingsplan

--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="btPlAdd">Add</string>
     <string name="sizeString">Size</string>
     <string name="weightString">Weight</string>
+    <string name="startTrainView">Trainingsview starten</string>
 
     <string name="exercisecatalog">
         [
