--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -13,10 +13,11 @@
     <string name="drawer_open">Navigationsleiste öffnen</string>
     <string name="drawer_close">Navigationsleiste öffnen</string>
     <string name="detailMG">Muskelgruppe: </string>
-    <string name="detailZG">Zielgruppe: </string>
+    <string name="detailEquip">Equipment: </string>
     <string name="detailDesc">Beschreibung: </string>
     <string name="detailAnl">Anleitung: </string>
     <string name="detailName">Dummy-Name</string>
+    <string name="detailSchwierigkeit">Schwierigkeit: </string>
     <string name="songPlay">Play</string>
     <string name="songPause">Pause</string>
     <string name="songStop">Stop</string>
