Bug Fixes + Statistic File added
fixed app crashing on startup
fixed app crashing when opening uebungskatalog
fixed app crashing when opening uebungsdetail
fixed filter not working properly

added statistic package, fragment and fragment layout

--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -609,6 +609,8 @@
   }
 ]
     </string>
+
+    <string name="facebook_app_id">1541961082763294</string>
   <string name="trainingszielGesundheit">Cardio/Abnahme</string>
   <string name="trainingszielMaximalKraft">Maximalkraft</string>
   <string name="toggleButton">Trainiert/Untrainiert</string>
