--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -633,6 +633,7 @@
   <string name="tvFeedbackMood">Wie ist es dir bei dem Training gegangen?</string>
   <string name="heutestehen">Heute stehen </string>
   <string name="uebungenan">Übungen an!</string>
+  <string name="btnFeedbackShowStats">Weiter zur Statistik</string>
 
   <string-array name="navigationArray">
         <item>Mainmenü</item>
