Added the Quellenverzeichnis

--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -1,17 +1,22 @@
  \documentclass[a4paper, 12pt]{article}
  \usepackage{fiplystyle}
- 
+
 \title{FIPLY}
 \author{Daniel Bersenkowitsch, Andreas Denkmayr, Gerald Irsiegler}
 \date{19. Februar 2016}
 
 \begin{document}
 \maketitle
-
 \tableofcontents
+
 \newpage
 \subfile{denkmayr_Music-Player}
 \newpage
 \subfile{denkmayr_Fragments}
+\newpage
+\subfile{denkmayr_NavigationDrawer}
+
+\newpage
+\printbibliography
 
 \end{document}
