--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Music-Player.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Music-Player.tex
@@ -136,7 +136,7 @@ Dieser wird abgespielt und nach Ende des Songs wird sofort der nächste Playlist
 \item Der Play Button dient dem starten der Musikwiedergabe. \newline
 Während der Musikwiedergabe erscheint an dieser Stelle der Pause Button mit dem man die Musik pausieren kann. 
 \item Der Stop Button beendet die aktuelle Wiedergabe und setzt den Wiedergabefortschritt auf den Beginn des Songs. 
-\item Der Musikmodus Button stellt den aktuellen Modus durch Einfärbung des Buttons dar und ermöglicht einen Wechsel zwischen dem Übungsmodus und dem Musikmodus. \newline
+\item Der Musikmodus Button befindet sich in der Ecke unten rechts. Dieser stellt den aktuellen Modus durch seine Einfärbung dar und ermöglicht einen Wechsel zwischen dem Übungsmodus und dem Musikmodus. \newline
 Im Übungsmodus wird die aktuelle Übung und die Anweisungen zum Trainieren angezeigt. \newline
 Der Musikmodus hingegen ermöglicht ein Wechseln der Playlist und den manuellen Wechsel auf einen bestimmten Song. 
 \item Links von der Fortschrittsleiste wird der Fortschritt des aktuellen Songs im hh:mm:ss Format (ISO 8601) angezeigt. 
