--- a/FIPLY/Dokumente/FIPLY Latex/fiplystyle.sty
+++ b/FIPLY/Dokumente/FIPLY Latex/fiplystyle.sty
@@ -7,6 +7,9 @@
 \usepackage{subcaption}
 \usepackage{float}
 \usepackage{subfiles}
+\usepackage{biblatex}
+
+\addbibresource{literatur.bib}
 
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
