--- a/FIPLY/App/app/src/main/res/values/strings.xml
+++ b/FIPLY/App/app/src/main/res/values/strings.xml
@@ -688,4 +688,5 @@
     <string name="tvSettingsMusic">Wenn sie Musik einlesen, können sie Playlisten erstellen und während dem Trainieren Musik hören</string>
     <string name="btSettingsMusic">Musik einlesen</string>
     <string name="startSettings">Einstellungen</string>
+    <string name="choosevalidplan">Bitte generieren Sie einen Trainingsplan oder wählen einen aktiven Trainingsplan aus!</string>
 </resources>
