Added Latex Docs

--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -15,6 +15,8 @@
 \subfile{denkmayr_Fragments}
 \newpage
 \subfile{denkmayr_NavigationDrawer}
+\newpage
+\subfile{denkmayr_Permissions}
 
 \newpage
 \printbibliography
