--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Permissions.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Permissions.tex
@@ -1,13 +1,10 @@
 \documentclass[FIPLY_base.tex]{subfiles}
 
 \author{Andreas Denkmayr}
-\date{21. Februar 2016}
+\date{25. Februar 2016}
 
 \begin{document}
-\section{NavigationDrawer}
-\cite{bNavDrawer}\newline
+\section{Permissions}
 TODO
-
-
 
 \end{document}
