--- a/FIPLY/Dokumente/FIPLY Latex/fiplystyle.sty
+++ b/FIPLY/Dokumente/FIPLY Latex/fiplystyle.sty
@@ -7,7 +7,7 @@
 \usepackage{subcaption}
 \usepackage{float}
 \usepackage{subfiles}
-\usepackage{biblatex}
+\usepackage[sorting=none]{biblatex}
 
 \addbibresource{literatur.bib}
 
