--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -1,15 +1,66 @@
 % Encoding: UTF-8
 
-@Misc{androiddevelopers,
+@Misc{adFragments,
+  title = {Fragment},
+  month = feb,
+  year =  {2016},
+  url =   {http://developer.android.com/reference/android/app/Fragment.html}
+}
+
+@Misc{adFragmentsGuide,
+  title = {Fragments Guide},
+  month = feb,
+  year =  {2016},
+  url =   {http://developer.android.com/guide/components/fragments.html}
+}
+
+@Misc{adMain,
+  title = {Android Developers},
   month = feb,
   year =  {2016},
   url =   {http://developer.android.com/index.html}
 }
 
-@Misc{navdrawer,
+@Misc{adMediaPlayer,
+  title = {MediaPlayer},
+  month = feb,
+  year =  {2016},
+  url =   {http://developer.android.com/reference/android/media/MediaPlayer.html}
+}
+
+@Misc{adNavDrawer,
+  title = {Creating a Navigation Drawer},
+  month = feb,
+  year =  {2016},
+  url =   {http://developer.android.com/training/implementing-navigation/nav-drawer.html}
+}
+
+@Misc{bMediaPlayer,
+  author = {{Ravi Tamada}},
+  title =  {Android Building Audio Player Tutorial},
+  month =  feb,
+  year =   {2016},
+  url =    {http://www.androidhive.info/2012/03/android-building-audio-player-tutorial/}
+}
+
+@Misc{bNavDrawer,
   author = {{Ben Jakuben}},
   title =  {How to Add a Navigation Drawer in Android},
   month =  feb,
   year =   {2016},
   url =    {http://blog.teamtreehouse.com/add-navigation-drawer-android}
+}
+
+@Misc{wMusicDroid,
+  title = {MusicDroid - Audio Player Part I},
+  month = feb,
+  year =  {2016},
+  url =   {http://www.helloandroid.com/tutorials/musicdroid-audio-player-part-i}
+}
+
+@Misc{yMP3Player,
+  title = {Android: Build an MP3-Player},
+  month = feb,
+  year =  {2016},
+  url =   {https://www.youtube.com/watch?v=W1JE-jUisVU}
 }
