--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Fragments.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Fragments.tex
@@ -14,8 +14,8 @@ Fragments werden ab Android 3.0 (API level 11) zur Verfügung gestellt.
 \includegraphics[scale=0.60]{img/fragments_modules}
 \caption{Beispiel man kann mithilfe von Fragments Views erstellen, die sowohl auf einem Tablet als auch auf einem Handy ein optimales Benutzerinterface anbieten}
 \end{figure}
-\cite{androiddevelopers}
-\fullcite{androiddevelopers}
+\cite{adFragments}
+\cite{adFragmentsGuide}
 
 \newpage
 \subsection{Der Lifecycle}
