--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -19,6 +19,11 @@
 \subfile{denkmayr_Permissions}
 
 \newpage
+\section{Commercialization}
+\subfile{bersenkowitsch_promotions}
+\subfile{irsiegler_PaidVersion}
+
+\newpage
 \printbibliography
 
 \end{document}
