added my commercializing doc

--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -17,6 +17,8 @@
 \subfile{denkmayr_NavigationDrawer}
 \newpage
 \subfile{denkmayr_Permissions}
+\newpage
+\subfile{bersenkowitsch_Databinding}
 
 \newpage
 \section{Commercialization}
@@ -25,5 +27,8 @@
 
 \newpage
 \printbibliography
+
+\section{Der Trainingsplan}
+\subfile{bersenkowitsch_Trainingsplan}
 
 \end{document}
