--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_DataBinding.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_DataBinding.tex
@@ -62,7 +62,7 @@ Hier auf der untigen Grafik sehen wir eine Android XML-Layoutdatei mit dem Code 
 
 \begin{figure}[h]
 \centering
-\includegraphics[scale=0.45]{Bilder/DataBinding_vorher}
+\includegraphics[scale=0.45]{img/DataBinding_vorher}
 \caption{Screenshot des Codes wie er ohne Datenanbindung aussieht}
 \end{figure}
 
@@ -71,7 +71,7 @@ Ein weitere Umständlichkeit ist es, für jedes Element ein findViewById-casting
 
 \begin{figure}[h]
 \centering
-\includegraphics[scale=0.45]{Bilder/DataBinding_nacher}
+\includegraphics[scale=0.45]{img/DataBinding_nacher}
 \caption{Screenshot des Codes wie er mit Datenanbindung aussieht.}
 \end{figure}
 
