added my CommercializationDocs

--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -10,25 +10,33 @@
 \tableofcontents
 
 \newpage
-\subfile{denkmayr_Music-Player}
-\newpage
 \subfile{denkmayr_Fragments}
+
 \newpage
-\subfile{denkmayr_NavigationDrawer}
+\subfile{denkmayr_Bundles}
+
 \newpage
 \subfile{denkmayr_Permissions}
+
 \newpage
-\subfile{bersenkowitsch_Databinding}
+\subfile{denkmayr_Music-Player}
+
+\newpage
+\subfile{denkmayr_NavigationDrawer}
 
 \newpage
 \section{Commercialization}
-\subfile{bersenkowitsch_promotions}
+\subfile{denkmayr_Donations}
+\newpage
+\subfile{denkmayr_Freemium}
+\newpage
+\subfile{denkmayr_Advertising}
+\newpage
 \subfile{irsiegler_PaidVersion}
 
 \newpage
 \printbibliography
 
-\section{Der Trainingsplan}
-\subfile{bersenkowitsch_Trainingsplan}
+
 
 \end{document}
