--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -1,5 +1,12 @@
 % Encoding: UTF-8
 
+@Misc{adAdministerBilling,
+  title = {In-App-Billing},
+  month = feb,
+  year =  {2016},
+  url =   {https://developer.android.com/google/play/billing/billing_admin.html}
+}
+
 @Misc{adFragments,
   title = {Fragment},
   month = feb,
@@ -51,11 +58,40 @@
   url =    {http://blog.teamtreehouse.com/add-navigation-drawer-android}
 }
 
+@Misc{flattr,
+  title = {About Flattr},
+  month = feb,
+  year =  {2016},
+  url =   {https://flattr.com/about}
+}
+
+@Misc{gpDevContentPolicy,
+  title = {Google Play-Programmrichtlinien},
+  month = feb,
+  year =  {2016},
+  url =   {https://play.google.com/intl/ALL_de/about/developer-content-policy.html}
+}
+
+@Misc{gpInAppBilling,
+  title = {Google Play In-app Billing},
+  month = feb,
+  year =  {2016},
+  url =   {https://support.google.com/googleplay/android-developer/answer/6151557}
+}
+
 @Misc{wMusicDroid,
   title = {MusicDroid - Audio Player Part I},
   month = feb,
   year =  {2016},
   url =   {http://www.helloandroid.com/tutorials/musicdroid-audio-player-part-i}
+}
+
+@Misc{yFreemium,
+  author = {{Jarek Wilkiewicz}},
+  title =  {Implementing Freemium},
+  month =  feb,
+  year =   {2016},
+  url =    {https://www.youtube.com/watch?v=UvCl5Xx7Z5o}
 }
 
 @Misc{yMP3Player,
